--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "bin": {
-    "appiumNodeStatus": "./index.js"
+    "appiumnodestatus": "./index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
